--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@mui/material": "^5.11.7",
+    "@react-oauth/google": "^0.7.0",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
+    "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
