--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "buffer": "^6.0.3",
     "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^5.1.0",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.41",
     "mui-chips-input": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
