--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "browser-image-compression": "^2.0.2",
     "buffer": "^6.0.3",
     "jwt-decode": "^3.1.2",
+    "lottie-react": "^2.4.0",
     "mdb-react-ui-kit": "^5.1.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.41",
