--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.2",
     "browser-image-compression": "^2.0.2",
     "buffer": "^6.0.3",
+    "dotenv": "^16.0.3",
     "jwt-decode": "^3.1.2",
     "lottie-react": "^2.4.0",
     "mdb-react-ui-kit": "^5.1.0",
